fixed skimm this desciption

--- a/index.html
+++ b/index.html
@@ -261,8 +261,8 @@
           <ul style="font-style: italic; color: rgb(4, 100, 16);">Podcast Editing</ul>
 
           <p>
-            Current Sound Engineer at <a href="https://www.theskimm.com/" target="_blank">The Skimm</a> (weekly news podcast)
-            <li><a href="https://www.theskimm.com/skimm-this" target="_blank">Skimm This</a></li>
+            Current Sound Engineer at <a href="https://www.theskimm.com/" target="_blank">The Skimm</a> 
+            <li><a href="https://www.theskimm.com/skimm-this" target="_blank">Skimm This</a>(weekly news podcast)</li>
             <li><a href="https://www.theskimm.com/9-to-5ish" target="_blank">9-to-5ish</a></li>
             <li><a href="https://www.theskimm.com/pop-cultured" target="_blank">Pop Cultured (cancelled Fall '22)</a></li>
 
