updated with into the blue

--- a/indexRefactorJS.html
+++ b/indexRefactorJS.html
@@ -5,7 +5,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="elie Music CV" content="Elie McAfee-Hahn's Music CV.">
   <title>elie Music CV</title>
   <link rel="stylesheet" href="style.css">
   <link rel="icon" href="Assets/elie1ico2.ico" sizes="16x16 32x32 48x48 64x64" type="image/vnd.microsoft.icon">
@@ -158,15 +157,6 @@
           (selected)
         </div>
 
-
-        <div class="bgGreenPurpRed">
-          <summary>
-            co-songwriter; mixing engineer; mastering engineer
-          </summary> 
-          <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/70TpPLvfOX9fiextH1acUa?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-
-        </div>
-
         <div class="bgGreenRed">
           <summary>
             songwriter; mixing engineer
@@ -274,7 +264,7 @@
             Current Sound Engineer at <a href="https://www.theskimm.com/" target="_blank">The Skimm</a> 
             <li><a href="https://www.theskimm.com/skimm-this" target="_blank">Skimm This</a>(weekly news podcast)</li>
             <li><a href="https://www.theskimm.com/9-to-5ish" target="_blank">9-to-5ish</a></li>
-            <li><a href="https://www.theskimm.com/pop-cultured" target="_blank">Pop Cultured</a></li>
+            <li><a href="https://www.theskimm.com/pop-cultured" target="_blank">Pop Cultured (cancelled Fall '22)</a></li>
 
           </p>
         </div>
@@ -331,7 +321,7 @@
 
 
   </main>
-  <!-- <script src="index.js"></script> -->
+  <script src="index.js"></script>
 </body>
 
 </html>
