got rid of target="_blank"s

--- a/index.html
+++ b/index.html
@@ -35,21 +35,21 @@
  -->
 
  <aside>
-  <a href="https://www.instagram.com/ellie_modron_kurfwen/" target="_blank"> 
+  <a href="https://www.instagram.com/ellie_modron_kurfwen/" > 
     <button type="button" id="insta">instagram</button>
   </a>
   
-  <a href="https://suneinyneeenan.github.io/Enhydrax/" target="_blank"> 
+  <a href="https://suneinyneeenan.github.io/Enhydrax/" > 
     <button type="button" id="home">website</button>
   </a> 
-    <!-- <a href="https://31i3.bandcamp.com/" target="_blank">
+    <!-- <a href="https://31i3.bandcamp.com/" >
      <button type="button" id="bc">bandcamp</button>
     </a>
 
-     <a href="https://soundcloud.com/eliemcafeehahn" target="_blank"> 
+     <a href="https://soundcloud.com/eliemcafeehahn" > 
       <button type="button" id="sc">soundcloud</button>
     </a> -->
-     <a href="https://suneinyneeenan.github.io/Enhydrax/2021December%20McAfee-Hahn%20Resume.pdf" target="_blank"> 
+     <a href="https://suneinyneeenan.github.io/Enhydrax/2021December%20McAfee-Hahn%20Resume.pdf" > 
       <button type="button" id="resume">résumé</button>
     </a>
 
@@ -198,13 +198,13 @@
           rel. 29 Sept. 2022
           <br><br>
           <li>
-            <a href="https://tuesdaysuni.pcotandy.org/Pages/birdFaerieProphets.html" target="_blank">Track 1</a>
+            <a href="https://tuesdaysuni.pcotandy.org/Pages/birdFaerieProphets.html" >Track 1</a>
           </li>
           <li>
-            <a href="https://tuesdaysuni.pcotandy.org/Pages/sorcererAtTheEdge.html" target="_blank">Track 2</a>
+            <a href="https://tuesdaysuni.pcotandy.org/Pages/sorcererAtTheEdge.html" >Track 2</a>
           </li>
           <li>
-            <a href="https://tuesdaysuni.pcotandy.org/Pages/sorcerer.html" target="_blank">Track 3</a>
+            <a href="https://tuesdaysuni.pcotandy.org/Pages/sorcerer.html" >Track 3</a>
           </li>
         
         </p>
@@ -271,20 +271,20 @@
           <ul style="font-style: italic; color: rgb(4, 100, 16);">Podcast Editing</ul>
 
           <p>
-            Current Sound Engineer at <a href="https://www.theskimm.com/" target="_blank">The Skimm</a> 
-            <li><a href="https://www.theskimm.com/skimm-this" target="_blank">Skimm This</a>(weekly news podcast)</li>
-            <li><a href="https://www.theskimm.com/9-to-5ish" target="_blank">9-to-5ish</a></li>
-            <li><a href="https://www.theskimm.com/pop-cultured" target="_blank">Pop Cultured</a></li>
+            Current Sound Engineer at <a href="https://www.theskimm.com/" >The Skimm</a> 
+            <li><a href="https://www.theskimm.com/skimm-this" >Skimm This</a>(weekly news podcast)</li>
+            <li><a href="https://www.theskimm.com/9-to-5ish" >9-to-5ish</a></li>
+            <li><a href="https://www.theskimm.com/pop-cultured" >Pop Cultured</a></li>
 
           </p>
         </div>
 
         <div class="nonMusic">
-          Live Sound Engineer @ <a href="https://www.10forwardartsvenue.org/" target="_blank">10 Forward</a> Greenfield, MA
+          Live Sound Engineer @ <a href="https://www.10forwardartsvenue.org/" >10 Forward</a> Greenfield, MA
         </div>
 
         <div class="nonMusic">
-          Teach & Host Periodic Community Music Classes @ <a href="https://lookyheregreenfield.com/" target="_blank">Looky Here</a> Greenfield, MA
+          Teach & Host Periodic Community Music Classes @ <a href="https://lookyheregreenfield.com/" >Looky Here</a> Greenfield, MA
           <figure> 
             <img src="./Assets/flyer1.png" alt=""/>
             <img src="./Assets/flyer2.png" alt=""/>  
