--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
      <a href="https://soundcloud.com/eliemcafeehahn" > 
       <button type="button" id="sc">soundcloud</button>
     </a> -->
-     <a href="https://suneinyneeenan.github.io/Enhydrax/2021December%20McAfee-Hahn%20Resume.pdf" > 
+     <a href="https://suneinyneeenan.github.io/Enhydrax/2025_Resume_ElieMcafeeHahn.pdf" > 
       <button type="button" id="resume">résumé</button>
     </a>
 
